# zk-Analytics

./: .gitignore  ARTIFACT-EVALUATION.md  CITATION.cff  Cargo.toml  LICENSE  Makefile  README.md
.cargo/: config.toml
aggregator/core/: Cargo.toml  build.rs
aggregator/core/src/: lib.rs  merkle.rs
aggregator/host/: Cargo.toml
aggregator/host/src/: kafka_consumer.rs  lib.rs  main.rs  recovery.rs
aggregator/host/tests/: handoff_inheritance.rs  tombstone_recovery.rs
aggregator/methods/: Cargo.toml  methods.toml
aggregator/methods/guest/: Cargo.toml
aggregator/methods/guest/src/: main.rs
aggregator/methods/guest_cm/: Cargo.toml
aggregator/methods/guest_cm/src/: main.rs
aggregator/methods/guest_histogram/: Cargo.toml
aggregator/methods/guest_histogram/src/: main.rs
cf_detector/: Cargo.toml  README.md
cf_detector/src/: lib.rs  main.rs
common/: Cargo.toml  build.rs
common/src/: dp.rs  epoch.rs  fdb_chunking.rs  fdb_store.rs  lib.rs  rocksdb_store.rs
data_source/: Cargo.toml  build.rs
data_source/proto/: trillian_log.proto
data_source/src/: event_sources.rs  kafka_producer.rs  lib.rs  main.rs  transparency.rs
deploy/trillian/: docker-compose.yml  storage.sql
docs/: ARTIFACT-EVALUATION.md  BENCHMARKS.md  DISTRIBUTED_E2E_GUIDE.md  DISTRIBUTED_SETUP.md  EVALUATION_FAULT_RECOVERY.md  EVALUATION_ONLINE_RESHARDING.md  INTERNALS.md  QUERY_TYPES.md  transparency_log.md
native_baseline/: Cargo.toml
native_baseline/src/: main.rs
querier/core/: Cargo.toml  build.rs
querier/core/src/: lib.rs  merkle.rs
querier/host/: Cargo.toml
querier/methods/: Cargo.toml  methods.toml
querier/methods/guest/: Cargo.toml
querier/methods/guest/src/: main.rs
querier/methods/guest_cm/: Cargo.toml
querier/methods/guest_cm/src/: main.rs
querier/methods/guest_histogram/: Cargo.toml
querier/methods/guest_histogram/src/: main.rs
querier/methods/guest_raw/: Cargo.toml
querier/methods/guest_raw/src/: main.rs
querier/methods/guest_samples/: Cargo.toml
querier/methods/guest_samples/src/: main.rs
querier/methods/guest_series/: Cargo.toml
querier/methods/guest_series/src/: main.rs
querier/scripts/: kill_all.sh
querier/scripts/new_scripts/: README_SWEEP.md  bench_cm_epoch_query.sh  bench_histogram_epoch_query.sh  bench_samples_epoch_cm_query.sh  cm_sweep_results.csv  cm_sweep_results_backup.csv  histogram_sweep_results.csv  plot_querier_benchmarks.py  samples_sweep_results.csv  sweep_bench_queries.sh  sweep_cm.sh  sweep_histogram.sh  sweep_multi_source.sh  sweep_samples.sh  test_dev_mode.sh
querier/server/: Cargo.toml
querier/server/src/: main.rs
querier/server/src/main_parts/: common.rs  main_entry.rs  queries.rs
query_checker/: Cargo.toml  README.md
query_checker/src/: lib.rs  main.rs
query_checker/tests/: query_rules.rs
scripts/: .gitignore  DISTRIBUTED_E2E_GUIDE.md  DISTRIBUTED_SETUP.md  README.md  RESULTS_COLLECTION_GUIDE.md  _build_e2e_compare.py  _build_zk_compare.py  _caida_consumer_insert.sh  _cm_remeasure.sh  _cm_remeasure2.sh  _fig5_zk_orchestrator.sh  _fig7_requery.sh  _fig7_requery_mem.sh  _parse_dist_cell.py  _parse_e2e_cell.py  _parse_table2.py  _patch_cm_regen.py  _qzk_mem_test.sh  _zk_eval_orchestrator.sh  bench_distributed_aggregators.sh  bench_resharding_handoff.sh  bench_resharding_perf.sh  bench_resharding_real.sh  bench_resharding_xy.sh  build_baseline_tables.py  build_non_zk_results.py  debug_aggregator_consumption.sh  distributed_e2e_config.example.sh  distributed_e2e_config_google_histogram.sh  distributed_e2e_config_google_samples.sh  docker-compose-kafka.yml  example_distributed_setup.sh  ip_defaults.sh  kill_bench_processes.sh  kill_bench_services.sh  mem_trace.py  prep_caida.sh  prove_handoff_demo.sh  requirements.txt  reset_fdb.sh  (+21 more)
scripts/bench/: bench_resharding_handoff.sh  bench_resharding_perf.sh  bench_resharding_real.sh  bench_resharding_xy.sh  prove_handoff_demo.sh
scripts/distributed/: bench_distributed_aggregators.sh  example_distributed_setup.sh  run_distributed_baseline.sh  run_distributed_e2e.sh  run_distributed_matrix.sh
scripts/eval/: run_baseline_e2e.sh  run_baseline_matrix.sh  run_dev_zk_3datasets.sh  run_e2e_native_3datasets.sh  run_e2e_native_baseline.sh  run_fig7_native.sh  run_figures_native.sh  run_figures_zk.sh  run_local_e2e.sh  run_non_zk_baseline.sh  run_non_zk_phase2.sh  run_table2_sweep.sh  run_zkvm_aggr_56.sh  run_zkvm_dev_mode.sh  run_zkvm_query_proofs.sh
scripts/lib/: _build_table2.py  _build_zk_compare.py  _cm_remeasure2.sh  _fig7_requery_mem.sh  _parse_e2e_cell.py  build_baseline_tables.py  build_dist_tables.py  build_non_zk_results.py  common.sh  mem_trace.py
scripts/risc0/: bench_aggr_cm_sweep.sh  bench_aggr_cm_thread_sweep.sh  bench_aggr_histogram_sweep.sh  bench_aggr_histogram_thread_sweep.sh  bench_aggr_samples_sweep.sh  bench_aggr_samples_thread_sweep.sh  bench_aggr_thread_sweep.sh  bench_aggregator_sweep.sh  bench_caida_cm_epoch_128.sh  bench_caida_histogram_epoch_128.sh  bench_caida_samples_epoch_128.sh  bench_data_source_sweep.sh  bench_google_cm_epoch_128.sh  bench_google_histogram_epoch_128.sh  bench_google_samples_epoch_128.sh  bench_risc0_aggregator_epoch_128.sh
scripts/setup/: docker_no_sudo.sh  kafka-setup.sh  prep_caida.sh  reset_fdb.sh  reset_rocksdb.sh  setup_local_e2e.sh  setup_remote_e2e.sh
scripts/util/: kill_bench_processes.sh  kill_bench_services.sh  trillian_smoke.sh
testdata/caida_pcap/: .gitignore  pcap_ip_pairs_to_txt.py
testdata/google_cluster_data/: .gitignore
zkvm-common/: Cargo.toml
zkvm-common/src/: lib.rs  poseidon_pasta.rs  risc0_hash.rs
