[package]
name = "aggregator-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rust_crypto = { package = "sha2", version = "0.10", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
serde-big-array = { version = "0.5", default-features = false }
zkvm-common = { path = "../../zkvm-common", default-features = false }
hashbrown = { version = "0.14", default-features = false, features = ["ahash", "inline-more", "alloc"] }
merkle_light = { version = "0.4", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
bincode = { version = "2.0.0-rc.3", default-features = false, features = ["alloc", "serde"] }
risc0-zkvm = { version = "3", default-features = false }

[dev-dependencies]
rand = "0.8"

[features]
default = ["std"]
std = ["serde/std", "zkvm-common/std"]
