[package]
name = "zktelemetry-risc0-querier-core"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
serde = { version = "1", default-features = false, features = ["derive", "alloc"] }
zktelemetry-risc0-aggr-core = { path = "../../aggregator/core", default-features = false }
zktelemetry-risc0-common = { path = "../../zkvm-common", default-features = false }
rust_crypto = { package = "sha2", version = "0.10", default-features = false }
merkle_light = { version = "0.4", default-features = false }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
risc0-zkvm = { version = "3", default-features = false }

[dev-dependencies]
rand = "0.8"
bincode = { version = "2.0.0-rc.3", features = ["alloc", "serde"] }

[features]
default = ["std"]
std = ["serde/std", "zktelemetry-risc0-aggr-core/std"]
