[package]
name = "querier-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
hex = "0.4"
rand = "0.8"
bincode = "1"
sha2 = "0.10"
common = { path = "../../common" }
zkvm-common = { path = "../../zkvm-common" }
aggregator-core = { path = "../../aggregator/core" }
querier-core = { path = "../core" }
querier-methods = { path = "../methods" }

# RISC Zero
risc0-zkvm = "3"

[[bin]]
name = "bench_queries"
path = "src/bin/bench_queries.rs"
