[package]
name = "querier"
version = "0.1.0"
edition = "2021"

[features]
default = []
fdb = ["zktelemetry-common/fdb"]

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand = "0.8"
rayon = "1"
hex = "0.4"
sha2 = "0.10"
bytemuck = "1"

zktelemetry-common = { path = "../../common" }
zktelemetry-risc0-common = { path = "../../zkvm-common" }

# RISC Zero proving (host side)
risc0-zkvm = "3"
zktelemetry-risc0-querier-core = { path = "../core" }
zktelemetry-risc0-querier-methods = { path = "../methods" }
zktelemetry-risc0-aggr-core = { path = "../../aggregator/core" }

# Rule-based access-control (query blacklist) screen.
zktelemetry-query-checker = { path = "../../query_checker" }
