[package]
name = "querier"
version = "0.1.0"
edition = "2021"

[features]
default = []
fdb = ["common/fdb"]

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
rand = "0.8"
rayon = "1"
hex = "0.4"
sha2 = "0.10"
bytemuck = "1"

common = { path = "../../common" }
zkvm-common = { path = "../../zkvm-common" }

# RISC Zero proving (host side)
risc0-zkvm = "3"
querier-core = { path = "../core" }
querier-methods = { path = "../methods" }
aggregator-core = { path = "../../aggregator/core" }

# Rule-based access-control (query blacklist) screen.
query-checker = { path = "../../query_checker" }
